--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,23 @@
+<!--
+  Generated template for the HomePage page.
+
+  See http://ionicframework.com/docs/components/#navigation for more info on
+  Ionic pages and navigation.
+-->
 <ion-header>
-  <ion-navbar>
+  <ion-navbar hideBackButton = "true" color="danger">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title>Corpcare IT Solutions</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+  <h3>Welcome to Corpcare IT Solutions</h3>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
+  <button ion-button color="secondary" block icon-right (click)="openLogin()">Login<ion-icon name="log-in"></ion-icon></button>
+  <button ion-button block icon-right (click)="openMainContent()">Continue as Guest<ion-icon name="arrow-forward"></ion-icon></button>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <button ion-button secondary menuToggle>Menu</button>
 </ion-content>
