--- a/src/pages/rates/rates.html
+++ b/src/pages/rates/rates.html
@@ -17,7 +17,7 @@
 
 	<h4>How does this make you feel?</h4>
 
-
+	<smilerate></smilerate>
 
 	<button ion-button color="light">Let us know!</button>
 
