--- a/src/pages/maincontentg/maincontentg.html
+++ b/src/pages/maincontentg/maincontentg.html
@@ -92,6 +92,8 @@
     <ion-list *ngSwitchCase="'Unknown'">
     </ion-list>
   </div>
-<button ion-button block icon-right (click)="getUserDetails()">Proceed<ion-icon name="log-out"></ion-icon></button>
-</ion-content>
+ </ion-content>
+ <ion-footer>
+ <button ion-button block icon-right (click)="getUserDetails()">Proceed<ion-icon name="log-out"></ion-icon></button>
+</ion-footer>
 
