--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,17 +7,22 @@
 <ion-header>
   <ion-navbar hideBackButton = "true" color="danger">
     <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
+      <ion-icon name="menu" color ="light"></ion-icon>
     </button>
     <ion-title>Corpcare IT Solutions</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h3>Welcome to Corpcare IT Solutions</h3>
+  <div>
+  <h1 >Welcome to Corpcare IT Solutions</h1>
+</div>
 
-  <button ion-button color="secondary" block icon-right (click)="openLogin()">Login<ion-icon name="log-in"></ion-icon></button>
-  <button ion-button block icon-right (click)="openMainContent()">Continue as Guest<ion-icon name="arrow-forward"></ion-icon></button>
-
-  <button ion-button secondary menuToggle>Menu</button>
+<div>
+      <button ion-button color="secondary" block icon-right (click)="openLogin()">Login<ion-icon name="log-in"></ion-icon></button>
+  </div> 
 </ion-content>
+<ion-footer>
+      <button ion-button block icon-right (click)="openMainContent()">Continue as Guest<ion-icon name="arrow-forward"></ion-icon></button>
+    </ion-footer>
+ 
