--- a/src/pages/userreq/userreq.html
+++ b/src/pages/userreq/userreq.html
@@ -5,11 +5,11 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar hideBackButton = "true" color="danger">
+  <ion-navbar color="danger">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>User</ion-title>
+    <ion-title>Requests</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -19,11 +19,14 @@
 <ion-list  no-lines>
   <ion-item *ngFor = "let item of users; let i - index" text-wrap>
     <div>
+      <h3>
       The requested brand :
       {{item.selected}} and the issue is
       {{item.request}}
-       </div>
+       
+    </h3></div>
   </ion-item>
 </ion-list>
 </div>
 </ion-content>
+
