--- a/src/pages/maincontentg/maincontentg.html
+++ b/src/pages/maincontentg/maincontentg.html
@@ -5,7 +5,7 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar hideBackButton = "true" color="danger">
+  <ion-navbar color="danger">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
