--- a/src/pages/userreq/userreq.html
+++ b/src/pages/userreq/userreq.html
@@ -9,12 +9,13 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Requests</ion-title>
+    <ion-title>Corpcare IT Solutions</ion-title>
   </ion-navbar>
 </ion-header>
 
 
 <ion-content>
+  <h1>Requests</h1>
 <div>
 <ion-list  no-lines>
   <ion-item *ngFor = "let item of users; let i - index" text-wrap>
