rating, geolocation and fcm

--- a/src/pages/rates/rates.html
+++ b/src/pages/rates/rates.html
@@ -19,6 +19,6 @@
 
   <smilerate></smilerate>
 
-	<button ion-button color="light" (click)="rates()">Let us know!</button>
+<!--	<button ion-button color="light" (click)="rates()">Let us know!</button> -->
 
 </ion-content>
