--- a/src/pages/thankyoug/thankyoug.html
+++ b/src/pages/thankyoug/thankyoug.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the ThankyouPage page.
+  Generated template for the ThankyougPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -18,5 +18,5 @@
    
 </ion-content>
 <ion-footer>
-    <button ion-button color="secondary" block icon-right (click)="openReq()">Home<ion-icon name="home"></ion-icon></button>
+    <button ion-button color="secondary" block icon-right (click)="openLogin()">Home<ion-icon name="home"></ion-icon></button>
 </ion-footer>
