--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,15 +14,18 @@
 </ion-header>
 
 <ion-content padding>
-  <div>
-  <h1 >Welcome to Corpcare IT Solutions</h1>
-</div>
-
+    <div class="card-title"><h1>
+        Welcome to Corpcare IT Solutions</h1></div>
+    <ion-card>
+        <ion-card-content>
 <div>
       <button ion-button color="secondary" block icon-right (click)="openLogin()">Login<ion-icon name="log-in"></ion-icon></button>
   </div> 
+  </ion-card-content>
+</ion-card>
 </ion-content>
 <ion-footer>
-      <button ion-button block icon-right (click)="openMainContent()">Continue as Guest<ion-icon name="arrow-forward"></ion-icon></button>
+    <ion-card>
+      <button ion-button block color="danger" icon-right (click)="openMainContent()">Continue as Guest<ion-icon name="arrow-dropright"></ion-icon></button>
+    </ion-card>
     </ion-footer>
- 
