--- a/src/pages/maincontent/maincontent.html
+++ b/src/pages/maincontent/maincontent.html
@@ -13,12 +13,12 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-<div padding>
+<ion-content>
+<div>
    <button ion-button block icon-right (click)="userReqdis()">My Requests<ion-icon name="log-in"></ion-icon></button>
  </div>
-  <div padding>
-        <h3>Welcome...Please select the category</h3>
+ <div class ="card-title">
+        <h3>Please select the category</h3>
     <ion-segment [(ngModel)]="service" color="danger">
       <ion-segment-button value="Laptop">
         Laptop
@@ -39,7 +39,7 @@
     <ion-list *ngSwitchCase="'Laptop'">
       <ion-item>
 
-        <ion-label>Select brand</ion-label>
+        <ion-label color ="danger">Select brand</ion-label>
         <ion-select [(ngModel)]="lap" (ionChange) = "picked(lap)">
           <ion-option value="b1">b1</ion-option>
           <ion-option value="b2">b2</ion-option>
@@ -57,7 +57,7 @@
 
     <ion-list *ngSwitchCase="'Desktop'">
       <ion-item>
-        <ion-label>Select brand</ion-label>
+        <ion-label color ="danger">Select brand</ion-label>
         <ion-select [(ngModel)]="lap"  (ionChange) = "picked(lap)">
           <ion-option value="b11">b11</ion-option>
           <ion-option value="b12">b12</ion-option>
@@ -74,7 +74,7 @@
     </ion-list>
     <ion-list *ngSwitchCase="'Hardware/Software'">
       <ion-item>
-        <ion-label>Select brand</ion-label>
+        <ion-label color ="danger">Select brand</ion-label>
         <ion-select [(ngModel)]="lap"  (ionChange) = "picked(lap)">
           <ion-option value="b111">b111</ion-option>
           <ion-option value="b112">b112</ion-option>
