--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
   <ion-navbar hideBackButton = "true" color="danger">
-    <button ion-button menuToggle>
+    <button ion-button color = "danger" menuToggle>
       <ion-icon name="menu" color ="light"></ion-icon>
     </button>
     <ion-title>Corpcare IT Solutions</ion-title>
@@ -25,7 +25,7 @@
 </ion-card>
 </ion-content>
 <ion-footer>
-    <ion-card>
+    
       <button ion-button block color="danger" icon-right (click)="openMainContent()">Continue as Guest<ion-icon name="arrow-dropright"></ion-icon></button>
-    </ion-card>
+    
     </ion-footer>
