--- a/src/pages/userreq/userreq.html
+++ b/src/pages/userreq/userreq.html
@@ -21,7 +21,7 @@
   <ion-item *ngFor = "let item of users; let i - index" text-wrap>
     <div>
       <h3>
-      The requested brand :
+      Request Done: 
       {{item.selected}} and the issue is
       {{item.request}}
        
